added ytdl dependency

--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/Rugvip/node-ytl/issues"
   },
-  "homepage": "https://github.com/Rugvip/node-ytl"
+  "homepage": "https://github.com/Rugvip/node-ytl",
+  "dependencies": {
+    "ytdl": "~0.2.8"
+  }
 }
