--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
   "homepage": "https://github.com/Rugvip/node-ytl",
   "dependencies": {
     "ytdl": "~0.2.8",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "charm": "~0.2.0",
+    "colors": "~0.6.2",
+    "sprintf": "~0.1.3",
+    "string": "~1.8.1"
   }
 }
