--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "charm": "~0.2.0",
     "colors": "~0.6.2",
     "sprintf": "~0.1.3",
-    "string": "~1.8.1"
+    "string": "~1.8.1",
+    "async": "~0.9.0"
   }
 }
